// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPrefixPlugin 1.指定前缀 1`] = `
"@media screen and (min-width: 480px) {
  .my-app .ggg, .my-app #bbb {

  }
  
  body {
      background-color: lightgreen;
  }
}

.my-app #main {
  border: 1px solid black;
}

.my-app ul li  {
  padding: 5px;
}

.my-app :not(.abc) {
  
}"
`;

exports[`createSandboxPlugin 1.使用默认 css 沙箱名替换 1`] = `
"@media screen and (min-width: 480px) {
  [css-sandbox].ggg, [css-sandbox]#bbb {

  }
  
  body {
      background-color: lightgreen;
  }
}

[css-sandbox]#main {
  border: 1px solid black;
}

[css-sandbox]ul li  {
  padding: 5px;
}

[css-sandbox]:not(.abc) {
  
}"
`;

exports[`createSandboxPlugin 2.使用自定义 css 沙箱名 1`] = `
"@media screen and (min-width: 480px) {
  [my-sandbox].ggg, [my-sandbox]#bbb {

  }
  
  body {
      background-color: lightgreen;
  }
}

[my-sandbox]#main {
  border: 1px solid black;
}

[my-sandbox]ul li  {
  padding: 5px;
}

[my-sandbox]:not(.abc) {
  
}"
`;
